# tunie-music-app

./: .cursorignore  .cursorrules  .gitignore  .pre-commit-config.yaml  .quota_huggingface.json  .quota_openai.json  AI_INSIGHTS_ARCHITECTURE.md  AI_INSIGHTS_COMPLETE.md  AI_INSIGHTS_ENHANCEMENT_PLAN.md  AI_INSIGHTS_IMPLEMENTATION_SUMMARY.md  AI_INSIGHTS_QUICK_START.md  AI_INSIGHTS_TEST_REPORT.md  API_IMPLEMENTATION_COMPLETE.md  API_SETUP_GUIDE.md  CHANGES_ANALYSIS.md  CONFLICT_RESOLUTION_SUMMARY.md  Dockerfile  FINAL_API_VERIFICATION.md  FINAL_STATUS_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PR_MERGE_COMPLETE.md  QUICKSTART.md  README.md  UNDERSTANDING_SUMMARY.md  VERIFICATION_REPORT.md  ZERO_COST_GUARANTEE.md  app.py  deploy_aws.sh  docker-compose.yml  env.example  playlist_test_results_20250813_161040.txt  pyproject.toml  requirements.txt  run.sh  test_ai_insights_brutal.py  test_ai_insights_extreme.py  test_ai_insights_standalone.py  test_api_comprehensive.py  test_api_keys.py  (+10 more)
prompts/: mood_analysis.txt  playlist_enhancement.txt  playlist_generation.txt
src/: __init__.py  ai_providers.py  api_gateway.py  api_limits.py  circuit_breaker.py  config.py  constants.py  database.py  evaluation.py  exceptions.py  intent_classifier.py  keyword_handler.py  llm_agent.py  llm_driven_workflow.py  logging_config.py  memory_system.py  music_toolkit.py  quota_manager.py  rate_limiter.py  reasoning_engine.py  recommender.py  security.py  security_utils.py  spotify_client.py  user_profiler.py  utils.py  workflow.py  zero_cost_enforcer.py
styles/: premium.css
tests/: __init__.py  conftest.py  test_integration.py  test_recommender.py  test_spotify_client.py
tests/unit/: __init__.py  test_api_gateway.py  test_circuit_breaker.py  test_config.py  test_exceptions.py  test_models.py  test_quota_manager.py  test_rate_limiter.py
